// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GifGrid /> Debe mostrar items cuando se cargan imágenes con useFetchGifs. 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__zoomIn"
  >
    One Punch
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="ABC Title"
      url="https://google.com"
    />
  </div>
</Fragment>
`;

exports[`Pruebas en <GifGrid /> Debe mostrarse correctamente. 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__zoomIn"
  >
    One Punch
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
